[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlframe"
description = "Turning PySpark Into a Universal DataFrame API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ryan Eakman", email = "eakmanrq@gmail.com"}
]
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: SQL",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "prettytable<4",
    "sqlglot>=28.0.0,<28.6",
    "typing_extensions",
    "more-itertools",
]

[project.urls]
Homepage = "https://github.com/eakmanrq/sqlframe"

[project.optional-dependencies]
bigquery = [
    "google-cloud-bigquery[pandas]>=3,<4",
    "google-cloud-bigquery-storage>=2,<3",
]
dev = [
    "duckdb>=1.2,<1.5",
    "findspark>=2,<3",
    # 3.0.0 dropped support for Python 3.9 and this is needed by pytest-postgresql
    "mirakuru<3.0.0",
    "mypy>=1.10.0,<1.20",
    "openai>=1.30,<3",
    "pandas>=2,<3",
    "pandas-stubs>=2,<3",
    "psycopg>=3.1,<4",
    "pyarrow>=10,<23",
    "pyspark>=2,<3.6",
    "pytest>=8.2.0,<9.1",
    "pytest-forked",
    "pytest-postgresql>=6,<8",
    "pytest-rerunfailures",
    "pytest-xdist>=3.6,<3.9",
    "pre-commit>=3.7,<5",
    "ruff>=0.4.4,<0.15",
    "types-psycopg2>=2.9,<3",
    "docker>=7.1.0,<8",
]
docs = [
    "mkdocs==1.4.2",
    "mkdocs-include-markdown-plugin==6.0.6",
    "mkdocs-material==9.0.5",
    "mkdocs-material-extensions==1.1.1",
    "pymdown-extensions",
]
duckdb = [
    "duckdb>=1.2,<1.5",
    "pandas>=2,<3",
]
openai = [
    "openai>=1.30,<3",
]
pandas = [
    "pandas>=2,<3",
]
postgres = [
    "psycopg2>=2.8,<3",
]
redshift = [
    "redshift_connector>=2.1.1,<2.2.0",
]
snowflake = [
    "snowflake-connector-python[secure-local-storage]>=3.10.0,<4.2",
]
spark = [
    "pyspark>=2,<3.6",
]
databricks = [
    "databricks-sql-connector[pyarrow]>=3.6,<5",
]
gizmosql = [
    "adbc-driver-flightsql>=1.10,<2",
    "duckdb>=1.4,<1.5",
    "pandas>=2,<3",
]

[tool.setuptools.packages.find]
include = ["sqlframe", "sqlframe.*"]

[tool.setuptools.package-data]
sqlframe = ["py.typed", "*.pyi", "**/*.pyi"]

[tool.setuptools_scm]
write_to = "sqlframe/_version.py"
fallback_version = "0.0.0"
local_scheme = "no-local-version"

[tool.mypy]
disable_error_code = "import-untyped"
